<resources>
    <string name="app_name">MMLManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_settings_search">Search</string>
    <string name="dialog_saved_description">\"%1$s\" APK has been saved into \"MLManager\" folder with name: %2$s</string>
    <string name="dialog_saving">Saving %s APK&#8230;</string>
    <string name="dialog_saving_description">ML Manager is saving the APK into \"MLManager\" folder.</string>
    <string name="dialog_extract_fail">Extract failed</string>
    <string name="dialog_extract_fail_description">Unable to extract this APK. Please, try to restart your device.</string>

    <string name="transition_app_icon">App Icon Transition</string>
    <string name="dialog_run">Open</string>
    <string name="dialog_extract">Extract</string>
    <string name="dialog_uninstall">Uninstall</string>
    <string name="dialog_uninstall_description">Uninstall this app right now</string>
    <string name="dialog_extract_description">Extract this app under \"MLManager\" directory</string>
    <string name="dialog_cache">Remove cache</string>

    <string name="dialog_cache_description">Remove the cache for this app</string>
    <string name="dialog_clear_data">Clear data</string>
    <string name="dialog_clear_data_description">Remove all application data for this app</string>

    <string name="action_favorites">Favorites</string>
    <string name="action_hidden_apps">Hidden Apps</string>
    <string name="action_hide">Hide</string>
    <string name="action_unhide">Unhide</string>
    <string name="action_buy">Buy Pro</string>
    <string name="action_buy_description">With Root features</string>
    <string name="action_about">About</string>
</resources>
